# mosaic-nes

./: .gitignore  README.md  pom.xml
.github/workflows/: ci.yml
app/nes-applications/: pom.xml
app/rsu-nes-source/: pom.xml
app/rsu-source/: pom.xml
app/vehicle-sensor/: pom.xml
app/vehicle-sink/: pom.xml
docker/nes-source/: Dockerfile  QnV_short.csv  SpeedReport.csv
fed/nes-federate/: pom.xml
libs/nebulastream-java-client/: .gitignore  README.md  build.gradle  settings.gradle
scenarios/: README.md
scenarios/barcelona/: scenario_config.json
scenarios/barcelona-moving-range/: scenario_config.json
scenarios/barcelona-moving-range/application/: NesApp.json
scenarios/barcelona-moving-range/nes/: nes_config.json
scenarios/barcelona-moving-range/ns3/: ns3_config.json
scenarios/barcelona-moving-range/omnetpp/: omnetpp_config.json
scenarios/barcelona-moving-range/sumo/: barcelona.edg.xml
scenarios/barcelona-range-query/: scenario_config.json
scenarios/barcelona-range-query/application/: NesApp.json  barcelona.db
scenarios/barcelona-range-query/cell/: network.json
scenarios/barcelona-range-query/mapping/: mapping_config.json
scenarios/barcelona-range-query/nes/: nes_config.json
scenarios/barcelona-range-query/sumo/: barcelona.con.xml  barcelona.nod.xml  barcelona.rou.xml
scenarios/barcelona/cell/: network.json
scenarios/barcelona/mapping/: mapping_config.json
scenarios/barcelona/nes/: nes_config.json
scenarios/barcelona/omnetpp/: omnetpp.ini
scenarios/barcelona/phabmacs/: barcelona_cleaned.osm  phabmacs_config.json
scenarios/barcelona/sumo/: barcelona.net.xml  barcelona.sumocfg
scenarios/berlin/: scenario_config.json
scenarios/berlin-moving-range/: scenario_config.json
scenarios/berlin-moving-range/application/: NesApp.json
scenarios/berlin-moving-range/mapping/: mapping_config.json
scenarios/berlin-moving-range/nes/: nes_config.json
scenarios/berlin-moving-range/sumo/: ernst-reuter.sumocfg
scenarios/berlin-range-query/: scenario_config.json
scenarios/berlin-range-query/application/: NesApp.json
scenarios/berlin-range-query/cell/: network.json
scenarios/berlin-range-query/mapping/: mapping_config.json
scenarios/berlin-range-query/nes/: nes_config.json
scenarios/berlin-range-query/ns3/: ns3_federate_config.xml
scenarios/berlin-range-query/omnetpp/: omnetpp.ini
scenarios/berlin-range-query/phabmacs/: phabmacs_config.json
scenarios/berlin-range-query/sumo/: ernst-reuter.nod.xml
scenarios/berlin-without-nes/: scenario_config.json
scenarios/berlin-without-nes/mapping/: mapping_config.json
scenarios/berlin-without-nes/sumo/: ernst-reuter.edg.xml  ernst-reuter.rou.xml
scenarios/berlin/application/: SourceApp.json  ernst-reuter.db
scenarios/berlin/nes/: nes_config.json
scenarios/ernst-reuter/: scenario_config.json
scenarios/ernst-reuter/application/: NesApp.json  NesSinkApp.json
scenarios/ernst-reuter/cell/: network.json
scenarios/ernst-reuter/mapping/: mapping_config.json
scenarios/ernst-reuter/nes/: nes_config.json
scenarios/ernst-reuter/ns3/: ns3_config.json
scenarios/ernst-reuter/omnetpp/: omnetpp.ini  omnetpp_config.json
scenarios/ernst-reuter/output/: output_config.xml
scenarios/ernst-reuter/sns/: sns_config.json
scenarios/ernst-reuter/sumo/: ernst-reuter.con.xml  ernst-reuter.edg.xml  ernst-reuter.net.xml  ernst-reuter.nod.xml
scenarios/leipzig/: scenario_config.json
scenarios/leipzig-duplicates/: scenario_config.json
scenarios/leipzig-duplicates-moving-range/: scenario_config.json
scenarios/leipzig-duplicates-moving-range/application/: NesApp.json  SourceApp.json  SpeedSensorApp.json
scenarios/leipzig-duplicates-moving-range/mapping/: mapping_config.json
scenarios/leipzig-duplicates-moving-range/nes/: nes_config.json
scenarios/leipzig-duplicates/application/: SourceApp.json  SpeedSensorApp.json
scenarios/leipzig-duplicates/cell/: network.json
scenarios/leipzig-duplicates/mapping/: mapping_config.json
scenarios/leipzig-duplicates/nes/: nes_config.json
scenarios/leipzig-duplicates/sumo/: leipzig.net.xml
scenarios/leipzig-moving-range/: scenario_config.json
scenarios/leipzig-moving-range/application/: NesApp.json  leipzig.db
scenarios/leipzig-moving-range/mapping/: mapping_config.json
scenarios/leipzig-moving-range/nes/: nes_config.json
scenarios/leipzig-moving-range/sumo/: leipzig.net.xml  leipzig.sumocfg
scenarios/leipzig/application/: SinkApp.json  SpeedSensorApp.json
scripts/: package.sh
src/test/java/: ErnstReuterIT.java
tests/integration-tests/: pom.xml
tools/experiments-analyzer/: Pipfile  analyzer.py  analyzer_dim.py  lib.py  plotter.py  vehicle.py
tools/scenario-generator/: .gitignore  CMakeLists.txt  Makefile  macros.cmake
tools/scenario-generator/examples/configs/: barcelona.json  ernst-reuter-ci.json  ernst-reuter.json  leipzig.json
tools/scenario-generator/examples/scenarios/: .gitignore
tools/scenario-generator/src/: CMakeLists.txt
tools/scenario-generator/src/Executables/: CMakeLists.txt  ScenarioGeneratorStarter.cpp
tools/scenario-generator/src/Generator/: CMakeLists.txt  GeneratorConfig.cpp  GeneratorConfig.h  ScenarioGenerator.cpp  ScenarioGenerator.h
tools/scenario-generator/src/Mosaic/: CMakeLists.txt  Position.cpp  Position.h  Prototype.cpp  Prototype.h  Route.cpp  Route.h  Scenario.cpp  Scenario.h  ScenarioConvert.cpp  ScenarioConvert.h  Vehicle.cpp  Vehicle.h
tools/scenario-generator/src/Mosaic/Nebulastream/: CMakeLists.txt  NesFederate.cpp  NesFederate.h  NesNode.cpp  NesNode.h
tools/scenario-generator/tests/: CMakeLists.txt  GeneratorConfigTest.cpp  LoadFromDBTest.cpp  NesFederateToJsonTest.cpp  ScenarioConvertTest.cpp  ScenarioFromFileTest.cpp  ScenarioTest.cpp  ScenarioToJsonTest.cpp
tools/scenario-generator/tests/fixtures/: config.json  test.db
tools/simulation-runner/: Pipfile  experiment.py  questions.py  run.sh  runner.py  simulation.py
(+245 files in other folders)
